# synacor-challenge

./: LICENSE  README.md  commands.txt
decompiled/: 01.s  02.s  03.s
vm/: Cargo.toml
